--- a/index.html
+++ b/index.html
@@ -852,6 +852,23 @@
               </a>
             </li>
 
+            <li class="project-item active" data-filter-item data-category="React Component"></li>
+            <a href="https://animated-component-six.vercel.app/" target="_blank">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+                <img src="./assets/images/animated services component.png" alt="arrival" loading="lazy">
+              </figure>
+              <h3 class="project-title">Animated Services Page</h3>
+              <p class="project-category">
+                The Technology Stack component showcases various tech details in a responsive, interactive format. With
+                React and Tailwind CSS, it features smooth animations for expanding sections and intuitive SVG
+                indicators for mobile, enhancing user experience across devices.
+              </p>
+            </a>
+            </li>
+
 
             <li class="project-item  active" data-filter-item data-category="jQuery">
               <a href="https://registration-form-using-j-query.vercel.app/" target="_blank">
