--- a/index.html
+++ b/index.html
@@ -827,11 +827,27 @@
                   discover the all-in-one solution for your computational needs effortlessly
 
                 </p>
-
               </a>
             </li>
 
 
+            <li class="project-item active" data-filter-item data-category="React">
+              <a href="https://animated-component-six.vercel.app/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/animated services component.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Animated Service Design</h3>
+                <p class="project-category">
+                  The Technology Stack component showcases various tech details in a responsive, interactive format.
+                  With
+                  React and Tailwind CSS, it features smooth animations for expanding sections and intuitive SVG
+                  indicators for mobile, enhancing user experience across devices.
+                </p>
+              </a>
+            </li>
 
 
             <li class="project-item active" data-filter-item data-category="React">
@@ -852,7 +868,7 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="React Component"></li>
+            <!-- <li class="project-item active" data-filter-item data-category="React Component"></li>
             <a href="https://animated-component-six.vercel.app/" target="_blank">
               <figure class="project-img">
                 <div class="project-item-icon-box">
@@ -867,7 +883,7 @@
                 indicators for mobile, enhancing user experience across devices.
               </p>
             </a>
-            </li>
+            </li> -->
 
 
             <li class="project-item  active" data-filter-item data-category="jQuery">
@@ -966,7 +982,6 @@
               </a>
             </li>
 
-
             <li class="project-item active" data-filter-item data-category="React">
               <a href="https://job-board-gamma-ten.vercel.app/" target="_blank">
                 <figure class="project-img">
@@ -987,7 +1002,6 @@
                 </p>
               </a>
             </li>
-
 
             <li class="project-item active" data-filter-item data-category="React Components">
               <a href="https://feature-section-sigma.vercel.app/" target="_blank">
