--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
             </li>
 
 
-            <li class="project-item active" data-filter-item data-category="React Component">
+            <li class="project-item active" data-filter-item data-category="React Components">
               <a href="https://animated-component-six.vercel.app/" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
