--- a/index.html
+++ b/index.html
@@ -737,11 +737,29 @@
                   creating secure passwords. Customize your password’s length and complexity with easy-to-use sliders
                   and toggle switches. Generate and copy passwords effortlessly while enjoying a responsive design that
                   adapts to any device. Enhance your security with this simple yet powerful tool.</p>
-
-
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://ecom-seven-omega.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ecommerce.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">eCommerce</h3>
+
+                <p class="project-category">
+                  developed a responsive e-commerce frontend with Next.js, using the Fake Store API for dynamic product
+                  listings, cart functionality, and a checkout process with Formik and Yup. Features include
+                  auto-scrolling product recommendations and a user-friendly design for all devices
+                </p>
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="PHP">
               <a href="https://github.com/RachhadiyaYash/User-Registration-Management-System" target="_blank">
 
