added angular form

--- a/index.html
+++ b/index.html
@@ -650,6 +650,8 @@
             <li class="filter-item">
               <button data-filter-btn>jQuery</button>
             </li>
+            <li class="filter-item"> <button data-select-item>Angular</button>
+            </li>
             <li class="filter-item"> <button data-select-item>JavaScript</button>
             </li>
             <li class="filter-item">
@@ -691,6 +693,9 @@
               </li>
               <li class="select-item">
                 <button data-select-item>React Components</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Angular</button>
               </li>
             </ul>
 
@@ -737,6 +742,25 @@
                   creating secure passwords. Customize your password’s length and complexity with easy-to-use sliders
                   and toggle switches. Generate and copy passwords effortlessly while enjoying a responsive design that
                   adapts to any device. Enhance your security with this simple yet powerful tool.</p>
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Angular">
+              <a href="https://angular-form-template-driven.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/angular-template fortm.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Template Driven Form</h3>
+
+                <p class="project-category">This project is a comprehensive Angular application that demonstrates the
+                  power of template-driven forms with real-time validation, dynamic content, and file handling. Built
+                  with Angular 18 and Bootstrap, the form collects user information such as personal details, preferred
+                  exam location, and a file upload (PDF only).</p>
               </a>
             </li>
 
